...
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" red="0.36470588235294116" green="0.32941176470588235" blue="0.30980392156862746" alpha="1" colorSpace="calibratedRGB"/>
                        <accessibility key="accessibilityConfiguration" identifier="MainView">
                            <bool key="isElement" value="NO"/>
                        </accessibility>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="ULA-yM-ICy" secondAttribute="bottom" constant="20" id="1KZ-nA-tyW"/>
                            <constraint firstItem="ULA-yM-ICy" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7uZ-Th-jHc"/>
                            <constraint firstItem="EEC-sw-jRw" firstAttribute="width" secondItem="EEC-sw-jRw" secondAttribute="height" id="Mg6-an-K4k"/>
...
